Web application to store and read excel data in a database using Jersey, Java, Angular, Bootstrap, Chartist, and Jquery